--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
                 document.getElementById("txtout").value = result;
             }
             else {
-                alert("Use any other intiger for Key!");
-                document.getElementById("txtout").value = "Use any other intiger for Key!";
+              
+                document.getElementById("txtout").value = "This key reserved!Use any other intiger for Key!";
             }
         }
         //-------decryption----------
