with txt changes
to simplicity

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <div class="col-lg-8 text-center">
                     <h1 class="text-white mt-0">Encryptor</h1>
                     <hr class="divider my-4" />
-                    <label for="enckey" style="color: aliceblue">Key:</label>
+                    <label for="enckey" style="color: aliceblue">Key (Use only integers):</label>
                     <input type="number" id="enckey" class="form-control">
-                    <label for="txt" style="color: aliceblue">You text here:</label>
+                    <label for="txt" style="color: aliceblue">You text here(Use only charactors a-z and space.Other charactors are not applicable):</label>
                     <textarea class="form-control" id="txt" rows="3"></textarea>
                     <br>
                     <button type="button" class="btn btn-success" id="encbtn">Encrypt</button>
@@ -43,7 +43,7 @@
         </div>
     </section>
     <!-- Services-->
-    <section class="page-section bg-light" id="about">
+    <section class="page-section bg-light" id="">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
