--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <hr class="divider my-4" />
                     <label for="enckey" style="color: aliceblue">Key (Use only integers):</label>
                     <input type="number" id="enckey" class="form-control">
-                    <label for="txt" style="color: aliceblue">You text here(Use only charactors a-z and space.Other charactors are not applicable):</label>
+                    <label for="txt" style="color: aliceblue">You text here(Use only characters from a-z and 'space'.Other characters are not applicable):</label>
                     <textarea class="form-control" id="txt" rows="3"></textarea>
                     <br>
                     <button type="button" class="btn btn-success" id="encbtn">Encrypt</button>
