update error msg
error msg

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             }
             else {
               
-                document.getElementById("txtout").value = "This key reserved!Use any other intiger for Key!";
+                document.getElementById("txtout").value = "Invalid character includes or the key is reserved!Use any other intiger for Key!";
             }
         }
         //-------decryption----------
